--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>OPG SENTIĆ</title>
-        <link rel = "icon" href ="./assets/pic/logo.png" type ="image/x-icon">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous">
-        </script><link rel="stylesheet" href="./assets/style.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/fav/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png">
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="manifest" href="/manifest.json">
+        <title>OPG SENTIĆ VINKO | VINKOVO ZAČINSKO BILJE | uzgoj začinskog bilja,
+            začinskog bilja u teglama i salate na ekološki način.</title>
+        <meta name="phone" content="+385915514513">
+        <meta name="email" content="vinko.senti79@gmail.com">
+        <meta name="address" content="Zagrebačka 58 Obedišće Križ">
+        <meta name="geo.placename" content="Obedišće">
+        <meta name="geo.region" content="HR">
+        <meta name="description" content="Cilj nam je kao proizvođaču, direktno ponuditi zdrave, svježe i ukusne eko plodove.
+        Želimo našim kupcima isporučiti najvišu kvalitetu i svježinu po razumnim cijenama, trudeći se maksimalno skratiti vrijeme od branja do konzumacije.">
+        <meta property="og:image" content="seo.png">
+        <!--end seo-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./assets/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -41,7 +57,7 @@
         <section class="home" id="home">
             <div class="max-width">
                 <div class="home-content">
-                    <div class="text-1">OPG VINKO SENTIĆ</div>
+                    <div class="text-1">OPG SENTIĆ VINKO</div>
                     <div class="text-2">Vinkovo Začinsko <span style="color: #3ace2a;"> BILJE</span> <span style="color: #3ace2a;"><i  id="rot" class="fab fa-pagelines"></i></span></div>
                     <div class="text-3">Bavimo se proizvodnjom  <br><span class="typing" style="color: #3ace2a;"></span></div>
                 </div>
@@ -63,7 +79,7 @@
 
                         Ponosimo se dugom tradicijom uzgoja i proizvodnje. 
                         Osnovni nam je cilj ponuditi Vam naše domaće, zdrave i svježe proizvode iz prve ruke. 
-                        Plastenička proizvodnja i svaki korak u samom procesu se radi ručno (okopavanje, sadnja, plijevljenje, zalijevanje, prihrana).  Ne koriste se umjetna gnojiva. Gnoji se humusom kalifornijskih glista - <a style="text-decoration: underline; color: #3ace2a;" href="https://www.facebook.com/DrozdekD">glistalom</a>. 
+                        Plastenička proizvodnja i svaki korak u samom procesu se radi ručno (okopavanje, sadnja, plijevljenje, zalijevanje, prihrana).  Ne koriste se umjetna gnojiva. Gnoji se humusom kalifornijskih glista - <a style="text-decoration: underline; color: #3ace2a;" href="https://opg-drozdek.hr/">glistalom</a>. 
                         Kušajte naše proizvode. Sigurni smo da ćete uvidjeti razliku i osjetiti što znači pojesti svježe ubran, ekološki uzgojen, domaći proizvod. 
                         Cilj nam je kao proizvođaču, direktno ponuditi zdrave, svježe i ukusne eko plodove.
                          Želimo našim kupcima isporučiti najvišu kvalitetu i svježinu po razumnim cijenama, trudeći se maksimalno skratiti vrijeme od branja do konzumacije.
@@ -204,7 +220,7 @@
                             <div class="row">
                                 <i class="fas fa-tractor"></i>
                                 <div class="info">
-                                    <div class="head">OPG Vinko Sentić</div>
+                                    <div class="head">OPG Sentić Vinko</div>
                                     <div class="sub-title">Vinkovo začinsko <span style="color: #3ace2a;">BILJE <i style="font-size: 18px;" class="fab fa-pagelines"></i></span></div>
                                 </div>
                             </div>
@@ -240,14 +256,14 @@
                     </div>
                     <div class="column right">
                         <div class="text">Naša lokacija <i class="fas fa-map-marker-alt" style="color: #3ace2a;"></i></div>
-                        <iframe class="map" src="https://www.openstreetmap.org/export/embed.html?bbox=16.5304970741272%2C45.631055476762896%2C16.558821201324466%2C45.64428817847555&amp;layer=mapnik&amp;marker=45.637672218237135%2C16.54465913772583" style="border: 5px solid #3ace2a"></iframe>
+                        <iframe class="map" src="https://www.openstreetmap.org/export/embed.html?bbox=16.5304970741272%2C45.631055476762896%2C16.558821201324466%2C45.64428817847555&amp;layer=mapnik&amp;marker=45.637672218237135%2C16.54465913772583" loading="lazy" style="border: 5px solid #3ace2a"></iframe>
                     </div>
                 </div> 
             </div>
         </section>
 
         <footer>
-            <span> <span class="far fa-copyright"></span> 2021 All rights reserved opg-sentić.hr | Created by <a href="https://tomislav-busic.web.app">Tomislav Bušić</a></span>
+            <span> <span class="far fa-copyright"></span> 2021 All rights reserved opg-sentić.hr | Created by <a href="http://xn--tomislavbui-vlb28i.com/">Tomislav Bušić</a></span>
         </footer>
 
         <div class="intro">
