--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </section>
 
         <footer>
-            <span> <span class="far fa-copyright"></span> 2021 All rights reserved opg-sentić.hr | Created by <a href="http://xn--tomislavbui-vlb28i.com/">Tomislav Bušić</a></span>
+            <span> <span class="far fa-copyright"></span> 2021 All rights reserved opg-sentić.hr | Created by <a href="https://www.tomislavbusic.com/">Tomislav Bušić</a></span>
         </footer>
 
         <div class="intro">
